--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "click-directory",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "homepage": "https://hanzfelix.github.io/click-directory",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -15,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
     "vite": "^4.0.0"
