--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "autoprefixer": "^10.4.13",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.2.7",
     "vite": "^4.0.0"
   }
